external-dns/manifests/app-lb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app01
  namespace: external-dns
spec:
  replicas: 10
  selector:
    matchLabels:
      app: app01
  template:
    metadata:
      labels:
        app: app01
    spec:
      containers:
        - image: mcr.microsoft.com/dotnet/samples:aspnetapp
          name: aspnetapp
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app01-svc
  namespace: external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: app01.ogaba.io # external-dns configuration
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: app01
  type: LoadBalancer
