external-dns/manifests/hello-one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld-one 
  namespace: test-deploy 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld-one
  template:
    metadata:
      labels:
        app: aks-helloworld-one
    spec:
      containers:
      - name: aks-helloworld-one
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-one  
  namespace: test-deploy 
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: app2
    # service.beta.kubernetes.io/azure-load-balancer-ipv4: 0.0.0.0
    # service.beta.kubernetes.io/azure-load-balancer-resource-group: dns-zone
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-helloworld-one
