external-dns/manifests/app-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app02
  namespace: external-dns
spec:
  replicas: 4
  selector:
    matchLabels:
      app: app02
  template:
    metadata:
      labels:
        app: app02
    spec:
      containers:
        - image: mcr.microsoft.com/dotnet/samples:aspnetapp
          name: aspnetapp
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app02-svc
  namespace: external-dns

spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: app02
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app02-ingress
  namespace: external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: app2.ogaba.io.
spec:
  ingressClassName: nginx
  rules:
    - host: app2.ogaba.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app02-svc
                port:
                  number: 80
