external-dns/manifests/hello-ingress.yaml
# Modified Ingress for hello-world-ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: test-deploy 
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Enable SSL redirection
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: app10.ogaba.io.
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app10.ogaba.io
    secretName: tls-secret
  rules:
  - host: app10.ogaba.io
    http:
      paths:
      - path: /hello-world-one(/|$)
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-one
            port:
              number: 80
      - path: /hello-world-two(/|$)
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-two
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-one
            port:
              number: 80
---
# Modified Ingress for hello-world-ingress-static
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress-static
  namespace: test-deploy 
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Enable SSL redirection
    cert-manager.io/cluster-issuer: letsencrypt  # Switch to a production issuer
    external-dns.alpha.kubernetes.io/hostname: app10.ogaba.io.
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app10.ogaba.io
    secretName: tls-secret
  rules:
  - host: app10.ogaba.io
    http:
      paths:
      - path: /static(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-one
            port: 
              number: 80
